# crewai_deploy_app

./: README.md  pyproject.toml  report.md
src/crewapp/: crew.py  main.py  report.md  streamlit_app.py
