[project]
name = "crewapp"
version = "0.1.0"
description = "crewapp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "streamlit>=1.45.1",
]

[project.scripts]
crewapp = "crewapp.main:run"
run_crew = "crewapp.main:run"
train = "crewapp.main:train"
replay = "crewapp.main:replay"
test = "crewapp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
